# solana-cli-analytics

./: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/api/: api_client.rs  helius.rs  mod.rs
src/dashboard/: mod.rs  state.rs  ui.rs
src/metrics/: aggregator.rs  collector.rs  mod.rs
src/models/: mod.rs
src/websocket/: client.rs  ws_client.rs
tests/: api_integration.rs
