[package]
name = "solana-cli-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
tokio-tungstenite = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui = "0.19"
backoff = "0.3"
prometheus = "0.14"
hyper = "0.14"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15.0"